--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/assets/css/style.scss">
+
 <section class="project-section">
   <h2 class="project-title">Featured Projects</h2>
   <div class="project-cards">
