--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="/assets/css/style.scss">
+<title>{{ page.title }}</title>
+<description>{{page.description}}</description>
 
 <section class="project-section">
   <h2 class="project-title">Featured Projects</h2>
