--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 
 @import "_sass/pages-themes-midnight-v0.2.0-9-ge2bdf76";
-
+@import "jekyll-theme-midnight";
 /* Background and Text Colors */
 body {
   background-color: #1a1a2e; /* Dark blue background */
