--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/assets/css/style.scss">
+<link rel="stylesheet" href="/assets/css/style.css">
 <title>{{ page.title }}</title>
 <description>{{page.description}}</description>
 
