--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,16 @@
-<link rel="stylesheet" href="/assets/css/style.css">
-<title>{{ page.title }}</title>
-<description>{{page.description}}</description>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>{{ page.title }}</title>
+  <description>{{page.description}}</description>
+</head>
+<body>
+  
+
+
 
 <section class="project-section">
   <h2 class="project-title">Featured Projects</h2>
@@ -45,3 +55,5 @@
     faders.forEach(fader => appearOnScroll.observe(fader));
   });
 </script>
+</body>
+</html>
